[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scripts/Tests/Test1.gd" type="Script" id=1]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 146.0
margin/top = 82.0
margin/right = 385.0
margin/bottom = 212.0
text = "Play"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Rock" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 492.0
margin/right = 187.0
margin/bottom = 555.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Rock"
flat = false

[node name="Paper" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 212.0
margin/top = 495.0
margin/right = 383.0
margin/bottom = 551.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Paper"
flat = false

[node name="Scissor" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 496.0
margin/right = 568.0
margin/bottom = 545.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Scissor"
flat = false

[node name="Reset" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 159.0
margin/top = 624.0
margin/right = 339.0
margin/bottom = 680.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "reset"
flat = false

[connection signal="pressed" from="Rock" to="." method="_on_Rock_pressed"]

[connection signal="pressed" from="Paper" to="." method="_on_Paper_pressed"]

[connection signal="pressed" from="Scissor" to="." method="_on_Scissor_pressed"]

[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]


